# snowplow-rust-tracker

./: .gitignore  CHANGELOG  CLAUDE.md  Cargo.toml  README.md
.cargo/: audit.toml
.github/workflows/: audit.yml  ci.yml  publish.yml
src/: emitter.rs  error.rs  event.rs  event_batch.rs  event_store.rs  lib.rs  main.rs  payload.rs  snowplow.rs  subject.rs  tracker.rs
src/emitter/: CLAUDE.md  batch_emitter.rs  emitter.rs  mod.rs  retry_policy.rs
src/event_store/: event_store.rs  in_memory_event_store.rs  mod.rs
src/http_client/: http_client.rs  mod.rs  reqwest_client.rs
src/snowplow/: emitter.rs  event.rs  mod.rs  tracker.rs
tests/: CLAUDE.md  integration_tests.rs  test_batch_emitter.rs  test_events.rs
tests/common/: common.rs  flakey_http_client.rs  micro.rs  mod.rs
tests/common/micro_config/: iglu.json
