[package]
name = "snowplow_tracker"
description = "A package for tracking Snowplow events in Rust apps"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://snowplow.io"
repository = "https://github.com/snowplow/snowplow-rust-tracker"
keywords = ["snowplow", "tracker", "analytics"]

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
uuid = { version = "1.1.2", features = ["v4", "serde"] }
derive_builder = "0.11.2"
async-trait = "0.1.58"
log = "0.4.17"
rand = "0.8.5"

[dev-dependencies]
testcontainers = "0.14.0"
